Refactor account routes out

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,7 @@
 <body>
     Hi <%= name %>
 
-    <form action="/logout?_method=DELETE" method="POST">
+    <form action="/account/logout?_method=DELETE" method="POST">
         <button type="submit">Logout</button>
     </form>
 </body>
