--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,4 +13,4 @@
     </div>
     <button type="submit">Login</button>
 </form>
-<a href="/register">Register</a>
+<a href="/account/register">Register</a>
