--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,15 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Passport Tutorial</title>
-</head>
-<body>
-    Hi <%= name %>
+
+    <h1>Hi <%= name %></h1>
 
     <form action="/account/logout?_method=DELETE" method="POST">
-        <button type="submit">Logout</button>
+        <button class="btn btn-primary" type="submit">Logout</button>
     </form>
-</body>
-</html>
