--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -1,18 +1,18 @@
 <h1>Register</h1>
 
 <form action="register" method="POST">
-    <div>
+    <div class="form-group">
         <label for="name">Name</label>
-        <input type="text" name="name" id="name" required>
+        <input class="form-control" type="text" name="name" id="name" required>
     </div>
-    <div>
+    <div class="form-group">
         <label for="email">Email</label>
-        <input type="email" name="email" id="email" required>
+        <input class="form-control" type="email" name="email" id="email" required>
     </div>
-    <div>
+    <div class="form-group">
         <label for="password">Password</label>
-        <input type="password" name="password" id="password" required>
+        <input class="form-control" type="password" name="password" id="password" required>
     </div>
-    <button type="submit">Register</button>
+    <button class="btn btn-primary" type="submit">Register</button>
 </form>
 <a href="/account/login">Login</a>
