--- a/views/home/index.ejs
+++ b/views/home/index.ejs
@@ -1,5 +1,5 @@
 
-    <h1>Hi <%= name %></h1>
+    <h1>Hi <%= user.name %></h1>
 
     <form action="/account/logout?_method=DELETE" method="POST">
         <button class="btn btn-primary" type="submit">Logout</button>
