--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -20,9 +20,11 @@
                 <li class="nav-item active">
                   <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
                 </li>
+                <% if(user != null) { %>
                 <li class="nav-item">
-                  <a class="nav-link" href="#">Link</a>
+                  <a class="nav-link" href="/profile">Profile</a>
                 </li>
+                <% } %>
               </ul>
             </div>
           </nav>
