--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -22,7 +22,12 @@
                 </li>
                 <% if(user != null) { %>
                 <li class="nav-item">
-                  <a class="nav-link" href="/profile">Profile</a>
+                  <a class="nav-link" href="/manage/profile">Profile</a>
+                </li>
+                <li class="nav-item">
+                  <form action="/account/logout?_method=DELETE" method="POST">
+                    <button class="nav-link" type="submit">Logout</button>
+                  </form>
                 </li>
                 <% } %>
               </ul>
