--- a/views/manage/profile.ejs
+++ b/views/manage/profile.ejs
@@ -1,1 +1,13 @@
 <h1>Profile</h1>
+<form action="profile" method="POST">
+    <div class="form-group">
+        <label for="email">Name</label>
+        <input class="form-control" type="text" name="name" id="name" required value="<%= user.name %>">
+    </div>
+    <div class="form-group">
+        <label for="email">Email</label>
+        <input class="form-control" type="email" name="email" id="email" required value="<%= user.email %>">
+    </div>
+    <button class="btn btn-primary" type="submit">Update</button>
+</form>
+<a href="/">Cancel</a>
