Add a hardcoded version

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -27,6 +27,9 @@
                 <% } %>
               </ul>
             </div>
+            <div style="padding-right:5px;">
+              <small style="color: white">Version 0.3</small>
+            </div>
             <% if(user != null) { %>
             <form action="/account/logout?_method=DELETE" method="POST" class="form-inline my-2 my-lg-0">
               <button class="btn btn-secondary my-2 my-sm-0" type="Logout">Logout</button>
@@ -36,5 +39,8 @@
         <main class="container">
             <%- body %>
         </main>
+        <footer>
+          <!--TODO: Fixed footer for version info-->
+        </footer>
     </body>
 </html>
