--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -28,7 +28,7 @@
               </ul>
             </div>
             <div style="padding-right:5px;">
-              <small style="color: white">Version 0.6</small>
+              <small style="color: white"><%= machineName %>  Version 0.6</small>
             </div>
             <% if(user != null) { %>
             <form action="/account/logout?_method=DELETE" method="POST" class="form-inline my-2 my-lg-0">
