Some layout tweaks

--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -11,7 +11,7 @@
 
     <body>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
-            <a class="navbar-brand" href="#">Passport Demo</a>
+            <a class="navbar-brand" href="/">Passport Demo</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -28,7 +28,7 @@
               </ul>
             </div>
             <div style="padding-right:5px;">
-              <small style="color: white"><%= machineName %>  Version 0.6</small>
+              <small style="color: white"><%= machineName %>  Version 0.7</small>
             </div>
             <% if(user != null) { %>
             <form action="/account/logout?_method=DELETE" method="POST" class="form-inline my-2 my-lg-0">
