--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -1,18 +1,36 @@
-<h1>Login</h1>
-<% if(messages.error) { %>
-    <div class="alert alert-danger" role="alert">
-        <%= messages.error %>
-    </div>
-<% } %>
-<form action="login" method="POST">
+
+<div class="row">
+    <div class="col-md-3"></div>
+<div class="col-md-6">
+  <h1>Login</h1>
+  <% if(messages.error) { %>
+  <div class="alert alert-danger" role="alert">
+    <%= messages.error %>
+  </div>
+  <% } %>
+  <form action="login" method="POST">
     <div class="form-group">
-        <label for="email">Email</label>
-        <input class="form-control" type="email" name="email" id="email" required>
+      <label for="email">Email</label>
+      <input
+        class="form-control"
+        type="email"
+        name="email"
+        id="email"
+        required
+      />
     </div>
     <div class="form-group">
-        <label for="password">Password</label>
-        <input class="form-control" type="password" name="password" id="password" required>
+      <label for="password">Password</label>
+      <input
+        class="form-control"
+        type="password"
+        name="password"
+        id="password"
+        required
+      />
     </div>
     <button class="btn btn-primary" type="submit">Login</button>
-</form>
-<a href="/account/register">Register</a>
+  </form>
+  <a href="/account/register">Register</a>
+</div>
+</div>
